--- a/issBlueMetal/Views/AccountGroups/Details.cshtml
+++ b/issBlueMetal/Views/AccountGroups/Details.cshtml
@@ -3,7 +3,40 @@
 @{
     ViewBag.Title = "Details";
 }
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #8e24aa !important;
+    }
 
+    input[type=text]:not(.browser-default) {
+        width: 50%;
+    }
+
+    .card-content {
+        width: 70%;
+    }
+
+    input[type=text]:not(.browser-default):hover {
+        color: none;
+    }
+
+    table {
+        padding: 8px;
+        margin-left: 5px;
+    }
+
+    tr th {
+        margin-left: 20px !important;
+    }
+
+    .btn {
+        background-color: #ff5252 !important;
+        margin-bottom:20px;
+        margin-right:20px;
+    }
+</style>
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
@@ -31,11 +64,11 @@
             <div class="card-content">
                 <table>
                     <tr>
-                        <th style="width: 15%">   <label class="col-lg-2 font-weight-bold">Id</label></th>
+                        <th style="width: 25%">   <label class="col-lg-2 font-weight-bold">ID</label></th>
                         <th> @Html.DisplayFor(model => model.id)</th>
                     </tr>
                     <tr>
-                        <th style="width: 15%">   <label class="col-lg-2 font-weight-bold">Account Grouop</label></th>
+                        <th style="width: 15%">   <label class="col-lg-2 font-weight-bold">Account Group</label></th>
                         <th>@Html.DisplayFor(model => model.accountGrouop) </th>
                     </tr>
                     <tr>
