--- a/issBlueMetal/Views/Locations/Details.cshtml
+++ b/issBlueMetal/Views/Locations/Details.cshtml
@@ -3,6 +3,38 @@
 @{
     ViewBag.Title = "Details";
 }
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #8e24aa !important;
+    }
+
+    input[type=text]:not(.browser-default) {
+        width: 50%;
+    }
+
+    .card-content {
+        width: 70%;
+    }
+
+    input[type=text]:not(.browser-default):hover {
+        color: none;
+    }
+
+    table {
+        padding: 8px;
+        margin-left: 5px;
+    }
+
+    tr th {
+        margin-left: 10px;
+    }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+</style>
 
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
@@ -31,7 +63,7 @@
             <div class="card-content">
                 <table>
                     <tr>
-                        <th style="width: 15%">  <label class="col-lg-2 font-weight-bold">Location Name</label></th>
+                        <th style="width: 25%">  <label class="col-lg-2 font-weight-bold">Location Name</label></th>
                       <th>  @Html.DisplayFor(model => model.name)</th>
 
                     </tr>
