--- a/issBlueMetal/Views/AcLedgers/Create.cshtml
+++ b/issBlueMetal/Views/AcLedgers/Create.cshtml
@@ -4,13 +4,27 @@
     ViewBag.Title = "Create";
 }
 
+<style>
+    label {
+        font-size: 19px;
+        font-weight: bold;
+        color: #a53394 !important;
+    }
 
+    input[type=text]:not(.browser-default) {
+        width: 100%;
+    }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+</style>
 
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
             <div class="col s10 m6 l6 breadcrumbs-left">
-                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Account ledger Create</span></h5>
+                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Create Account ledger </span></h5>
 
                 <ol class="breadcrumbs mb-0">
                     <li class="breadcrumb-item">
@@ -29,7 +43,7 @@
 <div class="row">
     <div class="col s12">
         <div class="card card-tabs">
-            <div class="card-content">
+            <div class="card-content" style="margin:20px">
                 @using (Html.BeginForm())
                 {
                     @Html.AntiForgeryToken()
@@ -44,8 +58,8 @@
                         <div class="row">
                             <div class="form-group">
 
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Account ledger</label>
+                                <div class="input-field col s4">
+                                    <label for="icon_prefix3">Account ledger</label><br />
                                     <div class="form-control input-field">
                                         @Html.EditorFor(model => model.accountledger, new { htmlAttributes = new { @class = "form-control",  } })
                                         @Html.ValidationMessageFor(model => model.accountledger, "", new { @class = "text-danger" })
@@ -54,8 +68,8 @@
                             </div>
                             <div class="form-group">
 
-                                <div class="input-field col s3"style="height: 240.047px">
-                                    <label for="icon_prefix3">Account Group</label>
+                                <div class="input-field col s4">
+                                    <label for="icon_prefix3">Account Group</label><br />
                                     <div class="form-control input-field">
                                         @Html.DropDownList("accountGroupID", null, htmlAttributes: new { @class = "form-control" })
                                         @Html.ValidationMessageFor(model => model.accountGroupID, "", new { @class = "text-danger" })
@@ -65,8 +79,8 @@
                             </div>
                             <div class="form-group">
 
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Opening Bal</label>
+                                <div class="input-field col s4">
+                                    <label for="icon_prefix3">Opening Bal</label><br />
                                     <div class="form-control input-field">
                                         @Html.EditorFor(model => model.openingBal, new { htmlAttributes = new { @class = "form-control",  } })
                                         @Html.ValidationMessageFor(model => model.openingBal, "", new { @class = "text-danger" })
@@ -75,8 +89,8 @@
                             </div>
                             <div class="form-group">
 
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Status</label>
+                                <div class="input-field col s4">
+                                    <label for="icon_prefix3">Status</label><br />
                                     <div class="form-control input-field">
                                         @Html.DropDownList("type", new List<SelectListItem>
                                          {
@@ -90,8 +104,8 @@ new SelectListItem{ Text="Credit", Value="Credit"},
                         </div>
 
                         <div class="form-group">
-                            <div class="col-md-offset-2 input-field col s3">
-                                <input type="submit" value="CREATE" class="btn btn-default" />
+                            <div class="col-md-offset-2 input-field col s4">
+                                <input type="submit" value="Submit" class="btn btn-default" />
                             </div>
                         </div>
 
