--- a/issBlueMetal/Views/AcLedgers/Delete.cshtml
+++ b/issBlueMetal/Views/AcLedgers/Delete.cshtml
@@ -4,6 +4,28 @@
     ViewBag.Title = "Delete";
 }
 
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #8e24aa !important;
+        padding: 5px;
+    }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+
+    h6 {
+        color: #f96a47;
+        font-weight: 600;
+    }
+
+    table {
+        margin-left: 40px;
+        width: 75%;
+    }
+</style>
 
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
@@ -29,46 +51,35 @@
     <div class="col s12">
         <div class="card card-tabs">
             <div class="card-content">
-
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Account ledger</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.accountledger)
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Account Group</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.accountGroup.accountGrouop)
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Opening Bal</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.openingBal)
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Type</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.type)
-                    </div>
-                </div>
-
-
-
-
+                <h6>Are you sure you want to delete this?</h6><br />
+                <table>
+                    <tr>
+                        <th style="width: 25%">  <label class="col-lg-2 font-weight-bold">Account ledger</label></th>
+                        <th> @Html.DisplayFor(model => model.accountledger)</th>
+                    </tr>
+                    <tr>
+                        <th style="width: 15%">    <label class="col-lg-2 font-weight-bold">Account Group</label></th>
+                        <th>@Html.DisplayFor(model => model.accountGroup.accountGrouop)</th>
+                    </tr>
+                    <tr>
+                        <th style="width: 15%">  <label class="col-lg-2 font-weight-bold">Opening Bal</label></th>
+                        <th>   @Html.DisplayFor(model => model.openingBal)</th>
+                    </tr>
+                    <tr>
+                        <th style="width: 15%"> <label class="col-lg-2 font-weight-bold">Type</label></th>
+                        <th>@Html.DisplayFor(model => model.type)</th>
+                    </tr>
+                </table>
 
                 @using (Html.BeginForm())
                 {
                     @Html.AntiForgeryToken()
 
-                    <div class="form-actions no-color" style="text-align:center">
-                        <input type="submit" value="Delete" class="btn btn-default" /> |
-                        @Html.ActionLink("Back to List", "Index")
-                    </div>
-                   
+                <div class="form-actions no-color" style="text-align:right">
+                    <input type="submit" value="Delete" class="btn btn-default" /> 
+                    @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-primary" })
+                </div>
+
                 }
             </div>
         </div>
