--- a/issBlueMetal/Views/AcLedgers/Index.cshtml
+++ b/issBlueMetal/Views/AcLedgers/Index.cshtml
@@ -9,6 +9,25 @@
         clear: both;
         padding: 2% !important;
     }
+
+    label {
+        font-size: 16px;
+        color: #a53394 !important;
+        font-weight: 400;
+    }
+
+    input[type=search]:not(.browser-default) {
+        height: 17px;
+    }
+
+    h3 {
+        text-align: center;
+        font-size: 16px !important;
+        color: #a53394;
+    }
+    td {
+        text-align:center!important;
+    }
 </style>
 
 <link href="//cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css" rel="stylesheet" />
@@ -46,7 +65,7 @@
                             <thead>
                                 <tr>
                                     <th>
-                                        <h3 class="card-title">Account ledger</h3>
+                                        <h3 class="card-title">Account Ledger</h3>
 
                                     </th>
                                     <th>
@@ -61,11 +80,8 @@
                                         <h3 class="card-title">Type</h3>
 
                                     </th>
-                                    <th>
-                                        <h3 class="card-title">Company Id</h3>
-
-                                    </th>
-                                    <th></th>
+                                   
+                                    <th><h3 class="card-title">Actions</h3></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -84,9 +100,7 @@
                                         <td>
                                             @Html.DisplayFor(modelItem => item.type)
                                         </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.companyId)
-                                        </td>
+                                      
                                         <td>
                                             @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
                                             @Html.ActionLink("Details", "Details", new { id = item.id }) |
