--- a/issBlueMetal/Views/AccountGroups/Create.cshtml
+++ b/issBlueMetal/Views/AccountGroups/Create.cshtml
@@ -3,13 +3,32 @@
 @{
     ViewBag.Title = "Create";
 }
+<style>
+    label {
+        font-size: 19px;
+        font-weight: bold;
+        color: #a53394 !important;
+    }
 
+    input[type=text]:not(.browser-default) {
+        width: 75%;
+    }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+    #select2-parentGroup-container
+    {
+        display:none;
+    }
+
+</style>
 
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
             <div class="col s10 m6 l6 breadcrumbs-left">
-                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Account Group Create</span></h5>
+                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Create Account Group </span></h5>
 
                 <ol class="breadcrumbs mb-0">
                     <li class="breadcrumb-item">
@@ -28,7 +47,7 @@
 <div class="row">
     <div class="col s12">
         <div class="card card-tabs">
-            <div class="card-content">
+            <div class="card-content" style="margin:20px">
                 @using (Html.BeginForm())
                 {
                     @Html.AntiForgeryToken()
@@ -44,8 +63,8 @@
                         <div class="row">
                             <div class="form-group">
 
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Account Group</label>
+                                <div class="input-field col s6">
+                                    <label for="icon_prefix3">Account Group</label><br />
                                     <div class="form-control input-field">
                                         @Html.EditorFor(model => model.accountGrouop, new { htmlAttributes = new { @class = "form-control",  } })
                                         @Html.ValidationMessageFor(model => model.accountGrouop, "", new { @class = "text-danger" })
@@ -55,24 +74,24 @@
                            
                                 <div class="form-group">
 
-                                    <div class="input-field col s3">
-                                        <label for="icon_prefix3">Parent Group</label>
+                                    <div class="input-field col s6">
+                                        <label for="icon_prefix3">Parent Group</label><br />
                                         <div class="form-control input-field">
                                             @Html.DropDownList("parentGroup", new List<SelectListItem>
                                              {
-    new SelectListItem{ Text="Capital Account", Value="Capital Account"},
-    new SelectListItem{ Text="Current Assets", Value="Current Assets"},
-    new SelectListItem{ Text="Current Liabilities", Value="Current Liabilities"},
-    new SelectListItem{ Text="Loans(Liability)", Value="Loans(Liability)"},
-    new SelectListItem{ Text="Revenue Accounts", Value="Revenue Accounts"},
-    }, "--- Select ---", new { @class = "js-example-basic-single" })
-                                                @Html.ValidationMessageFor(model => model.parentGroup, "", new { @class = "text-danger" })
+                                                new SelectListItem{ Text="Capital Account", Value="Capital Account"},
+                                                new SelectListItem{ Text="Current Assets", Value="Current Assets"},
+                                                new SelectListItem{ Text="Current Liabilities", Value="Current Liabilities"},
+                                                new SelectListItem{ Text="Loans(Liability)", Value="Loans(Liability)"},
+                                                new SelectListItem{ Text="Revenue Accounts", Value="Revenue Accounts"},
+                                                }, "--- Select ---", new { @class = "js-example-basic-single" })
+                                                @*@Html.ValidationMessageFor(model => model.parentGroup, "", new { @class = "text-danger" })*@
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <div class="col-md-offset-2 input-field col s3">
+                                <div class="col-md-offset-2 input-field col s6">
                                     <input type="submit" value="Submit" class="btn btn-default" />
                                 </div>
                             </div>
