--- a/issBlueMetal/Views/AccountGroups/Delete.cshtml
+++ b/issBlueMetal/Views/AccountGroups/Delete.cshtml
@@ -4,12 +4,33 @@
     ViewBag.Title = "Delete";
 }
 
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #8e24aa !important;
+        padding: 5px;
+    }
 
+    .btn {
+        background-color: #ff5252 !important;
+    }
+
+    h6 {
+        color: #f96a47;
+        font-weight: 600;
+    }
+
+    table {
+        margin-left: 40px;
+        width: 75%;
+    }
+</style>
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
             <div class="col s10 m6 l6 breadcrumbs-left">
-                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Account Group Delete</span></h5>
+                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Delete Account Group </span></h5>
 
                 <ol class="breadcrumbs mb-0">
                     <li class="breadcrumb-item">
@@ -28,38 +49,32 @@
 <div class="row">
     <div class="col s12">
         <div class="card card-tabs">
-            <div class="card-content">
-              
-                    <div class="form-group row">
-                        <label class="col-lg-2 font-weight-bold">Id</label>:
-                        <div class="col-lg-9">
-                            @Html.DisplayFor(model => model.id)
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label class="col-lg-2 font-weight-bold">Account Grouop</label>:
-                        <div class="col-lg-9">
-                            @Html.DisplayFor(model => model.accountGrouop)
-                        </div>
-                    </div>
-                    
-                    <div class="form-group row">
-                        <label class="col-lg-2 font-weight-bold">Parent Group</label>:
-                        <div class="col-lg-9">
-                            @Html.DisplayFor(model => model.parentGroup)
-                        </div>
-                    </div>
-                  
-               
+            <div class="card-content" style="margin:20px">
+                <h6>Are you sure you want to delete this?</h6><br />
+                <table>
+                    <tr>
+                        <th style="width: 25%">   <label class="col-lg-2 font-weight-bold">ID</label></th>
+                        <th> @Html.DisplayFor(model => model.id)</th>
+                    </tr>
+                    <tr>
+                        <th style="width: 15%">   <label class="col-lg-2 font-weight-bold">Account Group</label></th>
+                        <th>@Html.DisplayFor(model => model.accountGrouop) </th>
+                    </tr>
+                    <tr>
+                        <th style="width: 15%"> <label class="col-lg-2 font-weight-bold">Parent Group</label></th>
+                        <th>@Html.DisplayFor(model => model.parentGroup)</th>
+                    </tr>
+                </table>
+
 
                 @using (Html.BeginForm())
                 {
                     @Html.AntiForgeryToken()
 
-                    <div class="form-actions no-color" style="text-align:center">
-                        <input type="submit" value="Delete" class="btn btn-default" /> |
-                        @Html.ActionLink("Back to List", "Index")
-                    </div>
+                <div class="form-actions no-color" style="text-align:right">
+                    <input type="submit" value="Delete" class="btn btn-default" />
+                    @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-primary" })
+                </div>
                 }
             </div>
         </div>
