--- a/issBlueMetal/Views/AccountGroups/Edit.cshtml
+++ b/issBlueMetal/Views/AccountGroups/Edit.cshtml
@@ -3,14 +3,32 @@
 @{
     ViewBag.Title = "Edit";
 }
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #a53394 !important;
+    }
 
+    input[type=text]:not(.browser-default) {
+        width: 75%;
+    }
+
+        input[type=text]:not(.browser-default):hover {
+            color: none;
+        }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+</style>
 
 
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
             <div class="col s10 m6 l6 breadcrumbs-left">
-                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Account Group Edit</span></h5>
+                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Edit Account Group </span></h5>
 
                 <ol class="breadcrumbs mb-0">
                     <li class="breadcrumb-item">
@@ -29,7 +47,7 @@
 <div class="row">
     <div class="col s12">
         <div class="card card-tabs">
-            <div class="card-content">
+            <div class="card-content" style="margin:20px">
                 @using (Html.BeginForm())
                 {
                     @Html.AntiForgeryToken()
@@ -44,8 +62,8 @@
                         <div class="row">
                             <div class="form-group">
 
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Account Grouop</label>
+                                <div class="input-field col s6">
+                                    <label for="icon_prefix3">Account Group</label><br />
                                     <div class="form-control input-field">
                                         @Html.EditorFor(model => model.accountGrouop, new { htmlAttributes = new { @class = "form-control",  } })
                                         @Html.ValidationMessageFor(model => model.accountGrouop, "", new { @class = "text-danger" })
@@ -54,8 +72,8 @@
                             </div>
                             <div class="form-group">
 
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Parent Group</label>
+                                <div class="input-field col s6">
+                                    <label for="icon_prefix3">Parent Group</label><br />
                                     <div class="form-control input-field">
                                         @Html.DropDownList("parentGroup", new List<SelectListItem>
                                          {
@@ -71,8 +89,8 @@ new SelectListItem{ Text="Revenue Accounts", Value="Revenue Accounts"},
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-md-offset-2 input-field col s3">
-                                <input type="submit" value="SUBMIT" class="btn btn-default" />
+                            <div class="col-md-offset-2 input-field col s6">
+                                <input type="submit" value="Submit" class="btn btn-default" />
                             </div>
                         </div>
 
