--- a/issBlueMetal/Views/Companies/Create.cshtml
+++ b/issBlueMetal/Views/Companies/Create.cshtml
@@ -4,7 +4,21 @@
     ViewBag.Title = "Create";
 }
 
+<style>
+    label {
+        font-size: 19px;
+        font-weight: bold;
+        color: #a53394 !important;
+    }
 
+    input[type=text]:not(.browser-default) {
+        width: 100%;
+    }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+</style>
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
@@ -28,7 +42,7 @@
 <div class="row">
     <div class="col s12">
         <div class="card card-tabs">
-            <div class="card-content">
+            <div class="card-content" style="margin:25px">
                 @using (Html.BeginForm())
                 {
                     @Html.AntiForgeryToken()
@@ -46,8 +60,8 @@
 
                             <div class="form-group">
 
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Name</label>
+                                <div class="input-field col s4">
+                                    <label for="icon_prefix3">Name</label><br />
                                     <div class="form-control input-field">
                                         @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control", } })
                                         @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
@@ -56,8 +70,8 @@
                             </div>
                             <div class="form-group">
 
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Address</label>
+                                <div class="input-field col s4">
+                                    <label for="icon_prefix3">Address</label><br />
                                     <div class="form-control input-field">
                                         @Html.EditorFor(model => model.address, new { htmlAttributes = new { @class = "form-control", } })
                                         @Html.ValidationMessageFor(model => model.address, "", new { @class = "text-danger" })
@@ -66,8 +80,8 @@
                             </div>
                             <div class="form-group">
 
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Cell No</label>
+                                <div class="input-field col s4">
+                                    <label for="icon_prefix3">Cell No</label><br />
                                     <div class="form-control input-field">
                                         @Html.EditorFor(model => model.cellNo, new { htmlAttributes = new { @class = "form-control", } })
                                         @Html.ValidationMessageFor(model => model.cellNo, "", new { @class = "text-danger" })
@@ -76,7 +90,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-md-offset-2 input-field col s3">
+                            <div class="col-md-offset-2 input-field col s4">
                                 <input type="submit" value="Submit" class="btn btn-default" />
                             </div>
                         </div>
