--- a/issBlueMetal/Views/Companies/Edit.cshtml
+++ b/issBlueMetal/Views/Companies/Edit.cshtml
@@ -4,13 +4,31 @@
     ViewBag.Title = "Edit";
 }
 
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #a53394 !important;
+    }
 
+    input[type=text]:not(.browser-default) {
+        width: 90%;
+    }
+
+        input[type=text]:not(.browser-default):hover {
+            color: none;
+        }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+</style>
 
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
             <div class="col s10 m6 l6 breadcrumbs-left">
-                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Company Edit</span></h5>
+                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Edit Company </span></h5>
 
                 <ol class="breadcrumbs mb-0">
                     <li class="breadcrumb-item">
@@ -28,8 +46,8 @@
 </div>
 <div class="row">
     <div class="col s12">
-        <div class="card card-tabs">
-            <div class="card-content">
+        <div class="card card-tabs" >
+            <div class="card-content" style="margin:20px">
                 @using (Html.BeginForm())
                 {
                     @Html.AntiForgeryToken()
@@ -47,8 +65,8 @@
 
                             <div class="form-group">
 
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Name</label>
+                                <div class="input-field col s4">
+                                    <label for="icon_prefix3">Name</label><br />
                                     <div class="form-control input-field">
                                         @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control",  } })
                                         @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
@@ -57,8 +75,8 @@
                             </div>
                             <div class="form-group">
 
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Address</label>
+                                <div class="input-field col s4">
+                                    <label for="icon_prefix3">Address</label><br />
                                     <div class="form-control input-field">
                                         @Html.EditorFor(model => model.address, new { htmlAttributes = new { @class = "form-control", } })
                                         @Html.ValidationMessageFor(model => model.address, "", new { @class = "text-danger" })
@@ -67,8 +85,8 @@
                             </div>
                             <div class="form-group">
 
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Cell No</label>
+                                <div class="input-field col s4">
+                                    <label for="icon_prefix3">Cell No</label><br />
                                     <div class="form-control input-field">
                                         @Html.EditorFor(model => model.cellNo, new { htmlAttributes = new { @class = "form-control",  } })
                                         @Html.ValidationMessageFor(model => model.cellNo, "", new { @class = "text-danger" })
@@ -77,7 +95,7 @@
                             </div>
                         </div>
                             <div class="form-group">
-                                <div class="col-md-offset-2 input-field col s3">
+                                <div class="col-md-offset-2 input-field col s4">
                                     <input type="submit" value="SUBMIT" class="btn btn-default" />
                                 </div>
                             </div>
