--- a/issBlueMetal/Views/Companies/Index.cshtml
+++ b/issBlueMetal/Views/Companies/Index.cshtml
@@ -9,8 +9,27 @@
         clear: both;
         padding: 2% !important;
     }
-</style>
 
+    label {
+        font-size: 16px;
+        color: #a53394 !important;
+        font-weight: 400;
+    }
+
+    input[type=search]:not(.browser-default) {
+        height: 17px;
+    }
+
+    h3 {
+        text-align: center;
+        font-size: 16px !important;
+        color: #a53394;
+    }
+    td
+    {
+        text-align:center!important;
+    }
+</style>
 <link href="//cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css" rel="stylesheet" />
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
@@ -63,7 +82,9 @@
 
                                     </th>
 
-                                    <th></th>
+                                    <th>
+                                        <h3 class="card-title">Actions</h3>
+                                    </th>
                                 </tr>
                             </thead>
                             <tbody>
