--- a/issBlueMetal/Views/Customers/Create.cshtml
+++ b/issBlueMetal/Views/Customers/Create.cshtml
@@ -4,11 +4,27 @@
     ViewBag.Title = "Create";
 }
 
+<style>
+    label {
+        font-size: 19px;
+        font-weight: bold;
+        color: #a53394!important;
+    }
+
+    input[type=text]:not(.browser-default) {
+        width: 75%;
+    }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+    
+</style>
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
             <div class="col s10 m6 l6 breadcrumbs-left">
-                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Customer Create</span></h5>
+                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span> Add Customer </span></h5>
 
                 <ol class="breadcrumbs mb-0">
                     <li class="breadcrumb-item">
@@ -17,7 +33,7 @@
                     <li class="breadcrumb-item">
                         <a href="#">Create</a>
                     </li>
-                   
+
                 </ol>
             </div>
 
@@ -32,57 +48,61 @@
                 {
                     @Html.AntiForgeryToken()
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    
-                            <div class="header-elements">
-                                <div class="list-icons" style="text-align:right">
-                                    @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-primary" })
+
+                    <div class="header-elements">
+                        <div class="list-icons" style="text-align:right">
+                            @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-primary" })
+                        </div>
+                    </div>
+                    <div class="form-horizontal">
+                        <div class="form-group">
+                            <div class="input-field col s6">
+                                <label for="icon_prefix3">Customer Name</label><br />
+                                <div class="form-control input-field">
+
+                                    @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control", } })
+                                    @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
                                 </div>
                             </div>
-                     
+                        </div>
+                        <div class="form-group">
+                            <div class="input-field col s6">
+                                <label for="icon_prefix3">Address</label><br />
+                                <div class="form-control input-field">
 
-                            <div class="form-horizontal">
-
-                                <div class="form-group">
-                                    <label for="icon_prefix3">Customer Name</label>
-                                    <div class="col-md-10">
-                                        @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control", } })
-                                        @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-
-                                <div class="form-group">
-                                    <label for="icon_prefix3">Address</label>
-                                    <div class="col-md-10">
-                                        @Html.EditorFor(model => model.address, new { htmlAttributes = new { @class = "form-control",  } })
-                                        @Html.ValidationMessageFor(model => model.address, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-
-                                <div class="form-group">
-                                    <label for="icon_prefix3">Cell No</label>
-
-                                    <div class="col-md-10">
-                                        @Html.EditorFor(model => model.cellNo, new { htmlAttributes = new { @class = "form-control",  } })
-                                        @Html.ValidationMessageFor(model => model.cellNo, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-
-                                <div class="form-group">
-
-                                    <label for="icon_prefix3">Opening Balance</label>
-                                    <div class="col-md-10">
-                                        @Html.EditorFor(model => model.openingBalance, new { htmlAttributes = new { @class = "form-control",  } })
-                                        @Html.ValidationMessageFor(model => model.openingBalance, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="col-md-offset-2 col-md-10">
-                                        <input type="submit" value="Submit" class="btn btn-default" />
-                                    </div>
+                                    @Html.EditorFor(model => model.address, new { htmlAttributes = new { @class = "form-control", } })
+                                    @Html.ValidationMessageFor(model => model.address, "", new { @class = "text-danger" })
                                 </div>
                             </div>
-                 
+                        </div>
 
+                        <div class="form-group">
+                            <div class="input-field col s6">
+                                <label for="icon_prefix3">Phone No</label><br />
+                                <div class="form-control input-field">
+
+                                    @Html.EditorFor(model => model.cellNo, new { htmlAttributes = new { @class = "form-control", } })
+                                    @Html.ValidationMessageFor(model => model.cellNo, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="input-field col s6">
+                                <label for="icon_prefix3">Open Balance</label><br />
+                                <div class="form-control input-field">
+
+                                    @Html.EditorFor(model => model.openingBalance, new { htmlAttributes = new { @class = "form-control", } })
+                                    @Html.ValidationMessageFor(model => model.openingBalance, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <div class="col-md-offset-2 col-md-10">
+                                <input type="submit" value="Submit" class="btn btn-default" />
+                            </div>
+                        </div>
+                    </div>
                 }
 
             </div>
