--- a/issBlueMetal/Views/Customers/Delete.cshtml
+++ b/issBlueMetal/Views/Customers/Delete.cshtml
@@ -4,11 +4,31 @@
     ViewBag.Title = "Delete";
 }
 
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #8e24aa !important;
+        padding:5px;
+    }
+    .btn {
+        background-color: #ff5252 !important;
+    }
+    h6 {
+        color: #f96a47;
+        font-weight: 600;
+    }
+    table {
+        margin-left: 40px;
+        width: 75%;
+    }
+</style>
+
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
             <div class="col s10 m6 l6 breadcrumbs-left">
-                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Customer Delete</span></h5>
+                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span> Delete Customer</span></h5>
 
                 <ol class="breadcrumbs mb-0">
                     <li class="breadcrumb-item">
@@ -29,32 +49,28 @@
         <div class="card card-tabs">
             <div class="card-content">
 
+                    <h6>Are you sure you want to delete this?</h6><br />
+                    <table style="width:75%">
+                        <tr>
+                            <th style="width: 25%"> <label class="col-lg-2 font-weight-bold">Name</label></th>
+                            <th> @Html.DisplayFor(model => model.name)</th>
 
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Name</label>:
-                    <div class="col-lg-2">
-                        @Html.DisplayFor(model => model.name)
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Address</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.address)
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Cell No</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.cellNo)
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Opening Balance</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.openingBalance)
-                    </div>
+                        </tr>
+                        <tr>
+                            <th> <label class="col-lg-2 font-weight-bold">Address</label></th>
+                            <th> @Html.DisplayFor(model => model.address)</th>
+                        </tr>
+                        <tr>
+                            <th>   <label class="col-lg-2 font-weight-bold">Cell No</label></th>
+                            <th>
+                                @Html.DisplayFor(model => model.cellNo)
+                            </th>
+                        </tr>
+                        <tr>
+                            <th>   <label class="col-lg-2 font-weight-bold">Opening Balance</label></th>
+                            <th>  @Html.DisplayFor(model => model.openingBalance)</th>
+                        </tr>
+                    </table>
                 </div>
 
 
@@ -62,9 +78,9 @@
                 {
                     @Html.AntiForgeryToken()
 
-                    <div class="form-actions no-color" style="text-align:center">
-                        <input type="submit" value="Delete" class="btn btn-default" /> |
-                        @Html.ActionLink("Back to List", "Index")
+                    <div class="form-actions no-color" style="text-align:right">
+                        <input type="submit" value="Delete" class="btn btn-default" />
+                        @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-primary" })
                     </div>
                 }
             </div>
