--- a/issBlueMetal/Views/Customers/Edit.cshtml
+++ b/issBlueMetal/Views/Customers/Edit.cshtml
@@ -3,7 +3,23 @@
 @{
     ViewBag.Title = "Edit";
 }
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #a53394 !important;
+    }
 
+    input[type=text]:not(.browser-default) {
+        width: 75%;
+    }
+        input[type=text]:not(.browser-default):hover {
+            color:none;
+        }
+    .btn {
+            background-color: #ff5252 !important;
+        }
+</style>
 
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
@@ -40,43 +56,49 @@
 
 
                     <div class="form-horizontal">
-
                         <div class="form-group">
-                            <label for="icon_prefix3">Customer Name</label>
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control",  } })
-                                @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
+                            <div class="input-field col s6">
+                                <label for="icon_prefix3">Customer Name</label><br />
+                                <div class="form-control input-field">
+
+                                    @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control", } })
+                                    @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-field col s6">
+                                <label for="icon_prefix3">Address</label><br />
+                                <div class="form-control input-field">
+
+                                    @Html.EditorFor(model => model.address, new { htmlAttributes = new { @class = "form-control", } })
+                                    @Html.ValidationMessageFor(model => model.address, "", new { @class = "text-danger" })
+                                </div>
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label for="icon_prefix3">Address</label>
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.address, new { htmlAttributes = new { @class = "form-control",  } })
-                                @Html.ValidationMessageFor(model => model.address, "", new { @class = "text-danger" })
+                            <div class="input-field col s6">
+                                <label for="icon_prefix3">Phone No</label><br />
+                                <div class="form-control input-field">
+
+                                    @Html.EditorFor(model => model.cellNo, new { htmlAttributes = new { @class = "form-control", } })
+                                    @Html.ValidationMessageFor(model => model.cellNo, "", new { @class = "text-danger" })
+                                </div>
                             </div>
                         </div>
 
                         <div class="form-group">
+                            <div class="input-field col s6">
+                                <label for="icon_prefix3">Open Balance</label><br />
+                                <div class="form-control input-field">
 
-                            <label for="icon_prefix3">Cell No</label>
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.cellNo, new { htmlAttributes = new { @class = "form-control", } })
-                                @Html.ValidationMessageFor(model => model.cellNo, "", new { @class = "text-danger" })
+                                    @Html.EditorFor(model => model.openingBalance, new { htmlAttributes = new { @class = "form-control", } })
+                                    @Html.ValidationMessageFor(model => model.openingBalance, "", new { @class = "text-danger" })
+                                </div>
                             </div>
                         </div>
 
-
-                        <div class="form-group">
-                            <label for="icon_prefix3">Opening Balance</label>
-
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.openingBalance, new { htmlAttributes = new { @class = "form-control", } })
-                                @Html.ValidationMessageFor(model => model.openingBalance, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
-                        
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-10">
                                 <input type="submit" value="Submit" class="btn btn-default" />
