--- a/issBlueMetal/Views/Customers/Index.cshtml
+++ b/issBlueMetal/Views/Customers/Index.cshtml
@@ -9,6 +9,22 @@
         clear: both;
         padding: 2% !important;
     }
+
+    label {
+        font-size: 16px;
+        color: #a53394 !important;
+        font-weight: 400;
+    }
+
+    input[type=search]:not(.browser-default) {
+        height: 17px;
+    }
+
+    h3 {
+        text-align: center;
+        font-size: 16px !important;
+        color: #a53394;
+    }
 </style>
 
 
@@ -54,7 +70,7 @@
                             <thead class="thead-dark">
                                 <tr>
                                     <th>
-                                        <h3 class="card-title"> Customer Id</h3>
+                                        <h3 class="card-title"> Customer ID</h3>
 
                                     </th>
                                     <th>
@@ -73,26 +89,26 @@
                                         <h3 class="card-title">Opening Balance</h3>
 
                                     </th>
-                                    <th></th>
+                                    <th><h3 class="card-title">Actions</h3></th>
                                 </tr>
                             </thead>
                             <tbody>
                                 @foreach (var item in Model)
                                 {
                                     <tr>
-                                        <td>
+                                        <td style="text-align:center">
                                             @Html.DisplayFor(modelItem => item.id)
                                         </td>
-                                        <td>
+                                        <td style="text-align:center">
                                             @Html.DisplayFor(modelItem => item.name)
                                         </td>
-                                        <td>
+                                        <td style="text-align:center">
                                             @Html.DisplayFor(modelItem => item.address)
                                         </td>
-                                        <td>
+                                        <td style="text-align:center">
                                             @Html.DisplayFor(modelItem => item.cellNo)
                                         </td>
-                                        <td>
+                                        <td style="text-align:center">
                                             @Html.DisplayFor(modelItem => item.openingBalance)
                                         </td>
                                         <td>
@@ -112,7 +128,8 @@
     </div>
 </div>
 <script>
-    $(function () {
+   
+    $(function () {  
         $('#tblCustomer').DataTable({
           
             "buttons": [
@@ -142,6 +159,7 @@
                     text: '<i class="fas fa-print"></i> Print'
                 }
             ]
+
         });
     });
 </script>
