--- a/issBlueMetal/Views/Items/Delete.cshtml
+++ b/issBlueMetal/Views/Items/Delete.cshtml
@@ -4,6 +4,30 @@
     ViewBag.Title = "Delete";
 }
 
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #8e24aa !important;
+        padding: 5px;
+    }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+
+    h6 {
+        color: #f96a47;
+        font-weight: 600;
+    }
+    table
+    {
+        margin-left:40px;
+        width:75%;
+    }
+   
+</style>
+
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
@@ -28,45 +52,37 @@
     <div class="col s12">
         <div class="card card-tabs">
             <div class="card-content">
-               
-                   
-                        <div class="form-group row">
-                            <label class="col-lg-2 font-weight-bold">Name</label>:
-                            <div class="col-lg-2">
-                                @Html.DisplayFor(model => model.name)
-                            </div>
-                        </div>
-                       
-                        <div class="form-group row">
-                            <label class="col-lg-2 font-weight-bold">UOM</label>:
-                            <div class="col-lg-2">
-                                @Html.DisplayFor(model => model.uom)
-                            </div>
-                        </div>
+                <h6>Are you sure you want to delete this?</h6><br />
 
-                        <div class="form-group row">
-                            <label class="col-lg-2 font-weight-bold">Purchase Prize</label>:
-                            <div class="col-lg-2">
-                                @Html.DisplayFor(model => model.purchasePrize)
-                            </div>
-                        </div>
+                <table>
+                    <tr>
+                        <th style="width: 25%"> <label class="col-lg-2 font-weight-bold">Name</label></th>
+                        <th> @Html.DisplayFor(model => model.name)</th>
 
-                   
+                    </tr>
+                    <tr>
+                        <th> <label class="col-lg-2 font-weight-bold">UOM</label></th>
+                        <th> @Html.DisplayFor(model => model.uom)</th>
+                    </tr>
+                    <tr>
+                        <th>   <label class="col-lg-2 font-weight-bold">Purchase Prize</label></th>
+                        <th>
+                            @Html.DisplayFor(model => model.purchasePrize)
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>   <label class="col-lg-2 font-weight-bold">Sales Prize</label></th>
+                        <th> @Html.DisplayFor(model => model.salcePrize)</th>
+                    </tr>
+                </table>
 
-                        <div class="form-group row">
-                            <label class="col-lg-2 font-weight-bold">Sales Prize</label>:
-                            <div class="col-lg-2">
-                                @Html.DisplayFor(model => model.salcePrize)
-                            </div>
-                        </div>
-                    
                 @using (Html.BeginForm())
                 {
                     @Html.AntiForgeryToken()
 
-                    <div class="form-actions no-color"style="text-align:center">
-                        <input type="submit" value="Delete" class="btn btn-default" /> |
-                        @Html.ActionLink("Back to List", "Index")
+                    <div class="form-actions no-color" style="text-align:right">
+                        <input type="submit" value="Delete" class="btn btn-default" />
+                        @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-primary" })
                     </div>
                 }
             </div>
