--- a/issBlueMetal/Views/Items/Details.cshtml
+++ b/issBlueMetal/Views/Items/Details.cshtml
@@ -3,7 +3,39 @@
 @{
     ViewBag.Title = "Details";
 }
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #8e24aa !important;
+    }
 
+    input[type=text]:not(.browser-default) {
+        width: 50%;
+    }
+
+    .card-content {
+        width: 70%;
+    }
+
+    input[type=text]:not(.browser-default):hover {
+        color: none;
+    }
+
+    table {
+
+        padding: 8px;
+        margin-left: 5px;
+    }
+
+    tr th {
+        margin-left: 10px;
+    }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+</style>
 
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
@@ -32,15 +64,12 @@
             <div class="card-content">
                 <div class="card-header header-elements-inline">
                     <div class="header-elements" style="float: right;">
-                        <div class="list-icons">
-                            @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-primary" })
-                            @Html.ActionLink("Edit", "Edit", new { id = Model.id }, new { @class = "btn btn-success" })
-                        </div>
+
                     </div>
                 </div>
                 <table>
                     <tr>
-                        <th style="width: 15%"> <label class="col-lg-2 font-weight-bold">Name</label></th>
+                        <th style="width: 25%"> <label class="col-lg-2 font-weight-bold">Name</label></th>
                         <th> @Html.DisplayFor(model => model.name)</th>
 
                     </tr>
@@ -59,10 +88,15 @@
                         <th> @Html.DisplayFor(model => model.salcePrize)</th>
                     </tr>
                 </table>
-
-
             </div>
-          
+
+            <div class="header-elements">
+                <div class="list-icons" style="text-align:right">
+                    @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-primary" })
+                    @Html.ActionLink("Edit", "Edit", new { id = Model.id }, new { @class = "btn btn-success" })
+
+                </div>
+            </div>
         </div>
     </div>
 </div>
