--- a/issBlueMetal/Views/Items/Edit.cshtml
+++ b/issBlueMetal/Views/Items/Edit.cshtml
@@ -3,12 +3,30 @@
 @{
     ViewBag.Title = "Edit";
 }
+<style>
+    label {
+        font-size: 19px;
+        font-weight: bold;
+        color: #a53394 !important;
+    }
 
+    input[type=text]:not(.browser-default) {
+        width: 75%;
+    }
+
+        input[type=text]:not(.browser-default):hover {
+            color: none;
+        }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+</style>
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
             <div class="col s10 m6 l6 breadcrumbs-left">
-                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Item Edit</span></h5>
+                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span> Edit Item</span></h5>
 
                 <ol class="breadcrumbs mb-0">
                     <li class="breadcrumb-item">
@@ -41,37 +59,46 @@
 
 
                     <div class="form-horizontal">
-
-
                         <div class="form-group">
-                            <label for="icon_prefix3">Name</label>
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control", } })
-                                @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
+                            <div class="input-field col s6">
+                                <label for="icon_prefix3"> Item Name</label><br />
+                                <div class="form-control input-field">
+
+                                    @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control", } })
+                                    @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-field col s6">
+                                <label for="icon_prefix3">UOM</label><br />
+                                <div class="form-control input-field">
+
+                                    @Html.EditorFor(model => model.uom, new { htmlAttributes = new { @class = "form-control", } })
+                                    @Html.ValidationMessageFor(model => model.uom, "", new { @class = "text-danger" })
+                                </div>
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label for="icon_prefix3">UOM</label>
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.uom, new { htmlAttributes = new { @class = "form-control",  } })
-                                @Html.ValidationMessageFor(model => model.uom, "", new { @class = "text-danger" })
+                            <div class="input-field col s6">
+                                <label for="icon_prefix3">Purchase Price</label><br />
+                                <div class="form-control input-field">
+
+                                    @Html.EditorFor(model => model.purchasePrize, new { htmlAttributes = new { @class = "form-control", } })
+                                    @Html.ValidationMessageFor(model => model.purchasePrize, "", new { @class = "text-danger" })
+                                </div>
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label for="icon_prefix3">Purchase Prize</label>
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.purchasePrize, new { htmlAttributes = new { @class = "form-control",  } })
-                                @Html.ValidationMessageFor(model => model.purchasePrize, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
+                            <div class="input-field col s6">
+                                <label for="icon_prefix3">Sales Price</label><br />
+                                <div class="form-control input-field">
 
-                        <div class="form-group">
-                            <label for="icon_prefix3">Sales Prize</label>
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.salcePrize, new { htmlAttributes = new { @class = "form-control",  } })
-                                @Html.ValidationMessageFor(model => model.salcePrize, "", new { @class = "text-danger" })
+                                    @Html.EditorFor(model => model.salcePrize, new { htmlAttributes = new { @class = "form-control", } })
+                                    @Html.ValidationMessageFor(model => model.salcePrize, "", new { @class = "text-danger" })
+                                </div>
                             </div>
                         </div>
                         <div class="form-group">
