--- a/issBlueMetal/Views/Items/Index.cshtml
+++ b/issBlueMetal/Views/Items/Index.cshtml
@@ -9,8 +9,24 @@
         clear: both;
         padding: 2% !important;
     }
-</style>
 
+    label {
+        font-size: 16px;
+        color: #a53394!important;
+        font-weight: bold;
+    }
+
+    input[type=search]:not(.browser-default) {
+        height: 17px;
+    }
+
+    h3 {
+        text-align: center;
+        font-size: 16px !important;
+        color: #a53394;
+        font-weight: bold !important;
+    }
+</style>
 <link href="//cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css" rel="stylesheet" />
 
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
@@ -46,7 +62,7 @@
                             <thead>
                                 <tr>
                                     <th>
-                                        <h3 class="card-title">Item Id</h3>
+                                        <h3 class="card-title">Item ID</h3>
                                     </th>
                                     <th>
                                         <h3 class="card-title">Item Name</h3>
@@ -63,7 +79,9 @@
                                         <h3 class="card-title">Sales Prize</h3>
 
                                     </th>
-                                    <th></th>
+                                    <th>
+                                        <h3>Actions</h3>
+                                    </th>
 
                                 </tr>
                             </thead>
@@ -71,22 +89,22 @@
                                 @foreach (var item in Model)
                                 {
                                     <tr>
-                                        <td>
+                                        <td style="text-align:center">
                                             @Html.DisplayFor(modelItem => item.id)
                                         </td>
                                         <td>
                                             @Html.DisplayFor(modelItem => item.name)
                                         </td>
-                                        <td>
+                                        <td style="text-align:center">
                                             @Html.DisplayFor(modelItem => item.uom)
                                         </td>
-                                        <td>
+                                        <td style="text-align:center">
                                             @Html.DisplayFor(modelItem => item.purchasePrize)
                                         </td>
-                                        <td>
+                                        <td style="text-align:center">
                                             @Html.DisplayFor(modelItem => item.salcePrize)
                                         </td>
-                                        <td>
+                                        <td style="text-align:center">
                                             @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
                                             @Html.ActionLink("Details", "Details", new { id = item.id }) |
                                             @Html.ActionLink("Delete", "Delete", new { id = item.id })
