--- a/issBlueMetal/Views/Locations/Delete.cshtml
+++ b/issBlueMetal/Views/Locations/Delete.cshtml
@@ -3,6 +3,27 @@
 @{
     ViewBag.Title = "Delete";
 }
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #8e24aa !important;
+        padding: 5px;
+    }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+    h6 {
+        color: #f96a47;
+        font-weight: 600;
+    }
+
+    table {
+        margin-left: 40px;
+        width: 75%;
+    }
+</style>
 
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
@@ -28,23 +49,23 @@
     <div class="col s12">
         <div class="card card-tabs">
             <div class="card-content">
+                <h6>Are you sure you want to delete this?</h6><br />
                 <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Location Name</label>:
-                    <div class="col-lg-2">
-                        @Html.DisplayFor(model => model.name)
-                    </div>
+                    <label class="col-lg-2 font-weight-bold">Location Name</label>:&emsp;
+                    @Html.DisplayFor(model => model.name)
                 </div>
-
 
                 @using (Html.BeginForm())
                 {
                     @Html.AntiForgeryToken()
 
-                    <div class="form-actions no-color" style="text-align:center">
-                        <input type="submit" value="Delete" class="btn btn-default" /> |
-                        @Html.ActionLink("Back to List", "Index")
+                    <div class="form-actions no-color" style="text-align:right">
+                        <input type="submit" value="Delete" class="btn btn-default" />
+                        @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-primary" })
                     </div>
                 }
+
+
             </div>
         </div>
     </div>
