--- a/issBlueMetal/Views/Locations/Edit.cshtml
+++ b/issBlueMetal/Views/Locations/Edit.cshtml
@@ -3,12 +3,30 @@
 @{
     ViewBag.Title = "Edit";
 }
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #8e24aa !important;
+    }
 
+    input[type=text]:not(.browser-default) {
+        width: 50%;
+    }
+
+        input[type=text]:not(.browser-default):hover {
+            color: none;
+        }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+</style>
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
             <div class="col s10 m6 l6 breadcrumbs-left">
-                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Location Edit</span></h5>
+                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Edit Location </span></h5>
 
                 <ol class="breadcrumbs mb-0">
                     <li class="breadcrumb-item">
@@ -41,7 +59,7 @@
 
 
                     <div class="form-horizontal">
-                        <label for="icon_prefix3">Name</label>
+                        <label for="icon_prefix3">Location Name</label>
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control", } })
                             @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
