--- a/issBlueMetal/Views/RawMeteriyals/Create.cshtml
+++ b/issBlueMetal/Views/RawMeteriyals/Create.cshtml
@@ -3,12 +3,26 @@
 @{
     ViewBag.Title = "Create";
 }
+<style>
+    label {
+        font-size: 19px;
+        font-weight: bold;
+        color: #a53394 !important;
+    }
 
+    input[type=text]:not(.browser-default) {
+        width: 85%;
+    }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+</style>
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
             <div class="col s10 m6 l6 breadcrumbs-left">
-                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Raw Material Create</span></h5>
+                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Create Raw Material </span></h5>
 
                 <ol class="breadcrumbs mb-0">
                     <li class="breadcrumb-item">
@@ -41,8 +55,8 @@
                     <div class="row">
                         <div class="row">
                             <div class="form-group">
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Name</label>
+                                <div class="input-field col s4">
+                                    <label for="icon_prefix3">Name</label><br />
                                     <div class="form-control input-field">
                                         @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control",  } })
                                         @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
@@ -50,8 +64,8 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">UOM</label>
+                                <div class="input-field col s4">
+                                    <label for="icon_prefix3">UOM</label><br />
                                     <div class="form-control input-field">
 
                                         @Html.EditorFor(model => model.uom, new { htmlAttributes = new { @class = "form-control",  } })
@@ -60,8 +74,8 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Discription</label>
+                                <div class="input-field col s4">
+                                    <label for="icon_prefix3">Discription</label><br />
                                     <div class="form-control input-field">
 
                                         @Html.EditorFor(model => model.discription, new { htmlAttributes = new { @class = "form-control",  } })
