--- a/issBlueMetal/Views/RawMeteriyals/Delete.cshtml
+++ b/issBlueMetal/Views/RawMeteriyals/Delete.cshtml
@@ -4,12 +4,34 @@
     ViewBag.Title = "Delete";
 }
 
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #8e24aa !important;
+        padding: 5px;
+    }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+
+    h6 {
+        color: #f96a47;
+        font-weight: 600;
+    }
+
+    table {
+        margin-left: 40px;
+        width: 75%;
+    }
+</style>
 
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
             <div class="col s10 m6 l6 breadcrumbs-left">
-                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Raw Material Delete</span></h5>
+                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span> Delete Raw Material </span></h5>
 
                 <ol class="breadcrumbs mb-0">
                     <li class="breadcrumb-item">
@@ -29,36 +51,29 @@
     <div class="col s12">
         <div class="card card-tabs">
             <div class="card-content">
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Material Name</label>:
-                    <div class="col-lg-2">
-                        @Html.DisplayFor(model => model.name)
-                    </div>
-                </div>
-               
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">UOM</label>:
-                    <div class="col-lg-2">
-                        @Html.DisplayFor(model => model.uom)
-                    </div>
-                </div>
-               
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Discription</label>:
-                    <div class="col-lg-2">
-                        @Html.DisplayFor(model => model.discription)
-                    </div>
-                </div>
-                
+                <h6>Are you sure you want to delete this?</h6><br />
+                <table>
+                    <tr>
+                        <th style="width: 25%"> <label class="col-lg-2 font-weight-bold">Material Name</label></th>
+                        <th> @Html.DisplayFor(model => model.name)</th>
+                    </tr>
+                    <tr>
 
-
+                        <th><label class="col-lg-2 font-weight-bold">UOM</label></th>
+                        <th>@Html.DisplayFor(model => model.uom)</th>
+                    </tr>
+                    <tr>
+                        <th><label class="col-lg-2 font-weight-bold">Discription</label></th>
+                        <th>  @Html.DisplayFor(model => model.discription)</th>
+                    </tr>
+                </table>
                 @using (Html.BeginForm())
                 {
                     @Html.AntiForgeryToken()
 
-                    <div class="form-actions no-color" style="text-align:center">
+                    <div class="form-actions no-color" style="text-align:right">
                         <input type="submit" value="Delete" class="btn btn-default" />
-                        @Html.ActionLink("Back to List", "Index")
+                        @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-primary" })
                     </div>
                 }
             </div>
