--- a/issBlueMetal/Views/RawMeteriyals/Details.cshtml
+++ b/issBlueMetal/Views/RawMeteriyals/Details.cshtml
@@ -3,7 +3,38 @@
 @{
     ViewBag.Title = "Details";
 }
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #8e24aa !important;
+    }
 
+    input[type=text]:not(.browser-default) {
+        width: 50%;
+    }
+
+    .card-content {
+        width: 70%;
+    }
+
+    input[type=text]:not(.browser-default):hover {
+        color: none;
+    }
+
+    table {
+        padding: 8px;
+        margin-left: 5px;
+    }
+
+    tr th {
+        margin-left: 10px;
+    }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+</style>
 
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
@@ -32,11 +63,11 @@
             <div class="card-content">
                 <table>
                     <tr>
-                        <th  style="width: 15%"> <label class="col-lg-2 font-weight-bold">Material Name</label></th>
+                        <th style="width: 25%"> <label class="col-lg-2 font-weight-bold">Material Name</label></th>
                         <th> @Html.DisplayFor(model => model.name)</th>
-</tr>
+                    </tr>
                     <tr>
-                        
+
                         <th><label class="col-lg-2 font-weight-bold">UOM</label></th>
                         <th>@Html.DisplayFor(model => model.uom)</th>
                     </tr>
@@ -44,14 +75,15 @@
                         <th><label class="col-lg-2 font-weight-bold">Discription</label></th>
                         <th>  @Html.DisplayFor(model => model.discription)</th>
                     </tr>
-                </table>
+                </table><br />
+
+            </div>
             <div class="header-elements">
                 <div class="list-icons" style="text-align:right">
                     @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-primary" })
                     @Html.ActionLink("Edit", "Edit", new { id = Model.id }, new { @class = "btn btn-success" })
                 </div>
             </div>
-        </div>
         </div>
         
     </div>
