--- a/issBlueMetal/Views/RawMeteriyals/Edit.cshtml
+++ b/issBlueMetal/Views/RawMeteriyals/Edit.cshtml
@@ -3,13 +3,31 @@
 @{
     ViewBag.Title = "Edit";
 }
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #8e24aa !important;
+    }
 
+    input[type=text]:not(.browser-default) {
+        width: 90%;
+    }
+
+        input[type=text]:not(.browser-default):hover {
+            color: none;
+        }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+</style>
 
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
             <div class="col s10 m6 l6 breadcrumbs-left">
-                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Raw Material Edit</span></h5>
+                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Edit Raw Material </span></h5>
 
                 <ol class="breadcrumbs mb-0">
                     <li class="breadcrumb-item">
@@ -42,8 +60,8 @@
                     <div class="row">
                         <div class="row">
                             <div class="form-group">
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Name</label>
+                                <div class="input-field col s4">
+                                    <label for="icon_prefix3">Name</label><br />
                                     <div class="form-control input-field">
                                         @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control",  } })
                                         @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
@@ -51,8 +69,8 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">UOM</label>
+                                <div class="input-field col s4">
+                                    <label for="icon_prefix3">UOM</label><br />
                                     <div class="form-control input-field">
 
                                         @Html.EditorFor(model => model.uom, new { htmlAttributes = new { @class = "form-control",  } })
@@ -61,8 +79,8 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Discription</label>
+                                <div class="input-field col s4">
+                                    <label for="icon_prefix3">Discription</label><br />
                                     <div class="form-control input-field">
 
                                         @Html.EditorFor(model => model.discription, new { htmlAttributes = new { @class = "form-control",  } })
