--- a/issBlueMetal/Views/RawMeteriyals/Index.cshtml
+++ b/issBlueMetal/Views/RawMeteriyals/Index.cshtml
@@ -10,6 +10,22 @@
         clear: both;
         padding: 2% !important;
     }
+
+    label {
+        font-size: 16px;
+        color: #a53394 !important;
+        font-weight: 400;
+    }
+
+    input[type=search]:not(.browser-default) {
+        height: 17px;
+    }
+
+    h3 {
+        text-align: center;
+        font-size: 16px !important;
+        color: #a53394;
+    }
 </style>
 <link href="//cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css" rel="stylesheet" />
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
@@ -56,23 +72,25 @@
                                         <h3 class="card-title">Description</h3>
 
                                     </th>
-                                    <th></th>
+                                    <th>
+                                        <h3 class="card-title">Actions</h3>
+                                    </th>
                                 </tr>
                             </thead>
                             <tbody>
                                 @foreach (var item in Model)
                                 {
                                     <tr>
-                                        <td>
+                                        <td  style="text-align:center">
                                             @Html.DisplayFor(modelItem => item.name)
                                         </td>
-                                        <td>
+                                        <td  style="text-align:center">
                                             @Html.DisplayFor(modelItem => item.uom)
                                         </td>
-                                        <td>
+                                        <td  style="text-align:center">
                                             @Html.DisplayFor(modelItem => item.discription)
                                         </td>
-                                        <td>
+                                        <td style="text-align:center">
                                             @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
                                             @Html.ActionLink("Details", "Details", new { id = item.id }) |
                                             @Html.ActionLink("Delete", "Delete", new { id = item.id })
