--- a/issBlueMetal/Views/Staffs/Delete.cshtml
+++ b/issBlueMetal/Views/Staffs/Delete.cshtml
@@ -3,12 +3,33 @@
 @{
     ViewBag.Title = "Delete";
 }
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #8e24aa !important;
+        padding: 5px;
+    }
 
+    .btn {
+        background-color: #ff5252 !important;
+    }
+
+    h6 {
+        color: #f96a47;
+        font-weight: 600;
+    }
+
+    table {
+        margin-left: 40px;
+        width: 75%;
+    }
+</style>
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
             <div class="col s10 m6 l6 breadcrumbs-left">
-                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Staff Delete</span></h5>
+                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Delete Staff </span></h5>
 
                 <ol class="breadcrumbs mb-0">
                     <li class="breadcrumb-item">
@@ -28,78 +49,62 @@
     <div class="col s12">
         <div class="card card-tabs">
             <div class="card-content">
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Staff Id</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.id)
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Staff Name</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.name)
-                    </div>
-                </div>
+                <h6>Are you sure you want to delete this?</h6><br />
+                <table>
+                    <tr>
+                        <th style="width: 30%"><label class="col-lg-2 font-weight-bold">Staff ID</label></th>
+                        <th>@Html.DisplayFor(model => model.id)</th>
+                    </tr>
+                    <tr>
 
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Address</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.address)
-                    </div>
-                </div>
+                        <th>
+                            <label class="col-lg-2 font-weight-bold">Staff Name</label>
+                        </th>
+                        <th>@Html.DisplayFor(model => model.name)</th>
+                    </tr>
+                    <tr>
+                        <th><label class="col-lg-2 font-weight-bold">Address</label></th>
+                        <th>   @Html.DisplayFor(model => model.address)</th>
+                    </tr>
+                    <tr>
+                        <th><label class="col-lg-2 font-weight-bold">Cell No</label></th>
+                        <th>@Html.DisplayFor(model => model.cellNo)</th>
+                    </tr>
+                    <tr>
+                        <th><label class="col-lg-2 font-weight-bold">Licence No</label></th>
+                        <th>  @Html.DisplayFor(model => model.licenceNo)</th>
+                    </tr>
+                    <tr>
+                        <th><label class="col-lg-2 font-weight-bold">Badge No</label></th>
+                        <th>@Html.DisplayFor(model => model.badgeno)</th>
+                    </tr>
+                    <tr>
+                        <th><label class="col-lg-2 font-weight-bold">Licence Ex Date</label></th>
+                        <th> @Html.DisplayFor(model => model.licenceExDate)</th>
+                    </tr>
+                    <tr>
+                        <th> <label class="col-lg-2 font-weight-bold">Salary</label></th>
+                        <th> @Html.DisplayFor(model => model.salary)</th>
 
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Cell No</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.cellNo)
-                    </div>
-                </div>
+                    </tr>
+                    <tr>
+                        <th><label class="col-lg-2 font-weight-bold">Salary Type</label></th>
+                        <th>   @Html.DisplayFor(model => model.salaryType)</th>
+                    </tr>
+                </table>
 
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Licence No</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.licenceNo)
-                    </div>
-                </div>
 
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Badge No</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.badgeno)
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Licence Ex Date</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.licenceExDate)
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Salary</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.salary)
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Salary Type</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.salaryType)
-                    </div>
-                </div>
-
-                @using (Html.BeginForm())
-                {
-                    @Html.AntiForgeryToken()
-
-                    <div class="form-actions no-color" style="text-align:center">
-                        <input type="submit" value="Delete" class="btn btn-default" /> |
-                        @Html.ActionLink("Back to List", "Index")
-                    </div>
-                }
             </div>
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+
+                <div class="form-actions no-color" style="text-align:right;margin-right:20px">
+                    <input type="submit" value="Delete" class="btn btn-default" />
+                    @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-primary" })
+                </div>
+            }
+
         </div>
     </div>
 </div>
