--- a/issBlueMetal/Views/Staffs/Edit.cshtml
+++ b/issBlueMetal/Views/Staffs/Edit.cshtml
@@ -3,7 +3,21 @@
 @{
     ViewBag.Title = "Edit";
 }
+<style>
+    label {
+        font-size: 19px;
+        font-weight: bold;
+        color: #a53394 !important;
+    }
 
+    input[type=text]:not(.browser-default) {
+        width: 100%;
+    }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+</style>
 
 
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
@@ -44,7 +58,7 @@
                         <div class="form-group">
 
                             <div class="input-field col s3">
-                                <label for="icon_prefix3">Name</label>
+                                <label for="icon_prefix3">Name</label>&nbsp;
                                 <div class="form-control input-field">
                                     @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control", } })
                                     @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
@@ -54,7 +68,7 @@
                         <div class="form-group">
 
                             <div class="input-field col s3">
-                                <label for="icon_prefix3">Address</label>
+                                <label for="icon_prefix3">Address</label>&nbsp;
                                 <div class="form-control input-field">
                                     @Html.EditorFor(model => model.address, new { htmlAttributes = new { @class = "form-control", } })
                                     @Html.ValidationMessageFor(model => model.address, "", new { @class = "text-danger" })
@@ -64,9 +78,9 @@
                         <div class="form-group">
 
                             <div class="input-field col s3">
-                                <label for="icon_prefix3"></label>
+                                <label for="icon_prefix3">Cell No</label>&nbsp;
                                 <div class="form-control input-field">
-                                    @Html.EditorFor(model => model.cellNo, new { htmlAttributes = new { @class = "form-control",  } })
+                                    @Html.EditorFor(model => model.cellNo, new { htmlAttributes = new { @class = "form-control", } })
                                     @Html.ValidationMessageFor(model => model.cellNo, "", new { @class = "text-danger" })
                                 </div>
                             </div>
@@ -74,19 +88,19 @@
 
                         <div class="form-group">
                             <div class="input-field col s3">
-                                <label for="icon_prefix3">Licence No</label>
+                                <label for="icon_prefix3">Licence No</label>&nbsp;
                                 <div class="form-control input-field">
                                     @Html.EditorFor(model => model.licenceNo, new { htmlAttributes = new { @class = "form-control", } })
                                     @Html.ValidationMessageFor(model => model.licenceNo, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
+
+
                         <div class="form-group">
 
                             <div class="input-field col s3">
-                                <label for="icon_prefix3">Badge No</label>
+                                <label for="icon_prefix3">Badge No</label>&nbsp;
                                 <div class="form-control input-field">
                                     @Html.EditorFor(model => model.badgeno, new { htmlAttributes = new { @class = "form-control", } })
                                     @Html.ValidationMessageFor(model => model.badgeno, "", new { @class = "text-danger" })
@@ -96,19 +110,18 @@
                         <div class="form-group">
 
                             <div class="input-field col s3">
-                                <label for="icon_prefix3">Licence Ex Date</label>
+                                <label for="icon_prefix3">Licence Ex Date</label>&nbsp;
                                 <div class="form-control input-field">
-                                    @Html.EditorFor(model => model.licenceExDate, new { htmlAttributes = new { @class = "form-control", } })
-                                    @Html.ValidationMessageFor(model => model.licenceExDate, "", new { @class = "text-danger" })
+                                    @Html.TextBoxFor(m => m.licenceExDate, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
                                 </div>
                             </div>
                         </div>
                         <div class="form-group">
 
                             <div class="input-field col s3">
-                                <label for="icon_prefix3">Salary</label>
+                                <label for="icon_prefix3">Salary</label>&nbsp;
                                 <div class="form-control input-field">
-                                    @Html.EditorFor(model => model.salary, new { htmlAttributes = new { @class = "form-control",  } })
+                                    @Html.EditorFor(model => model.salary, new { htmlAttributes = new { @class = "form-control", } })
                                     @Html.ValidationMessageFor(model => model.salary, "", new { @class = "text-danger" })
                                 </div>
                             </div>
@@ -116,18 +129,17 @@
                         <div class="form-group">
 
                             <div class="input-field col s3">
-                                <label for="icon_prefix3">Salary Type</label>
+                                <label for="icon_prefix3">Salary Type</label>&nbsp;
                                 <div class="form-control input-field">
-                                    @Html.EditorFor(model => model.salaryType, new { htmlAttributes = new { @class = "form-control",  } })
+                                    @Html.EditorFor(model => model.salaryType, new { htmlAttributes = new { @class = "form-control", } })
                                     @Html.ValidationMessageFor(model => model.salaryType, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                         </div>
 
-
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-10">
-                                <input type="submit" value="SUBMIT" class="btn btn-default" />
+                                <input type="submit" value="Submit" class="btn btn-default" />
                             </div>
                         </div>
                     </div>
