--- a/issBlueMetal/Views/Suppliers/Create.cshtml
+++ b/issBlueMetal/Views/Suppliers/Create.cshtml
@@ -4,12 +4,26 @@
     ViewBag.Title = "Create";
 }
 
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #8e24aa !important;
+    }
 
+    input[type=text]:not(.browser-default) {
+        width: 75%;
+    }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+</style>
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
             <div class="col s10 m6 l6 breadcrumbs-left">
-                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Supplier Create</span></h5>
+                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Create Supplier </span></h5>
 
                 <ol class="breadcrumbs mb-0">
                     <li class="breadcrumb-item">
@@ -28,7 +42,7 @@
 <div class="row">
     <div class="col s12">
         <div class="card card-tabs">
-            <div class="card-content">
+            <div class="card-content" style="margin:40px">
                 @using (Html.BeginForm())
                 {
                     @Html.AntiForgeryToken()
@@ -44,8 +58,8 @@
 
                             <div class="form-group">
 
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Name</label>
+                                <div class="input-field col s6">
+                                    <label for="icon_prefix3">Name</label><br />
                                     @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control",  } })
                                     @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
                                 </div>
@@ -53,8 +67,8 @@
 
                             <div class="form-group">
 
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Address</label>
+                                <div class="input-field col s6">
+                                    <label for="icon_prefix3">Address</label><br />
                                     @Html.EditorFor(model => model.address, new { htmlAttributes = new { @class = "form-control",  } })
                                     @Html.ValidationMessageFor(model => model.address, "", new { @class = "text-danger" })
                                 </div>
@@ -62,8 +76,8 @@
 
                             <div class="form-group">
 
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Cell No</label>
+                                <div class="input-field col s6">
+                                    <label for="icon_prefix3">Cell No</label><br />
                                     @Html.EditorFor(model => model.cellNo, new { htmlAttributes = new { @class = "form-control",  } })
                                     @Html.ValidationMessageFor(model => model.cellNo, "", new { @class = "text-danger" })
                                 </div>
@@ -71,8 +85,8 @@
 
                             <div class="form-group">
 
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Opening Balance</label>
+                                <div class="input-field col s6">
+                                    <label for="icon_prefix3">Opening Balance</label><br />
                                     @Html.EditorFor(model => model.openingBalance, new { htmlAttributes = new { @class = "form-control", } })
                                     @Html.ValidationMessageFor(model => model.openingBalance, "", new { @class = "text-danger" })
                                 </div>
@@ -80,7 +94,7 @@
                         </div>
                         
                         <div class="form-group">
-                            <div class="col-md-offset-2 input-field col s3">
+                            <div class="col-md-offset-2 input-field col s6">
                                 <input type="submit" value="Submit" class="btn btn-default" />
                             </div>
                         </div>
