--- a/issBlueMetal/Views/Suppliers/Delete.cshtml
+++ b/issBlueMetal/Views/Suppliers/Delete.cshtml
@@ -3,13 +3,33 @@
 @{
     ViewBag.Title = "Delete";
 }
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #8e24aa !important;
+        padding: 5px;
+    }
 
+    .btn {
+        background-color: #ff5252 !important;
+    }
 
+    h6 {
+        color: #f96a47;
+        font-weight: 600;
+    }
+
+    table {
+        margin-left: 40px;
+        width: 75%;
+    }
+</style>
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
             <div class="col s10 m6 l6 breadcrumbs-left">
-                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Supplier Delete</span></h5>
+                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Delete Supplier </span></h5>
 
                 <ol class="breadcrumbs mb-0">
                     <li class="breadcrumb-item">
@@ -29,61 +49,43 @@
     <div class="col s12">
         <div class="card card-tabs">
             <div class="card-content">
-
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Supplier Id</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.id)
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Supplier Name</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.name)
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Address</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.address)
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Cell No</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.cellNo)
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Opening Balance</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.openingBalance)
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">CST No</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.cstNo)
-                    </div>
-                </div>
-
-
-
-
+                <h6>Are you sure you want to delete this?</h6><br />
+                <table>
+                    <tr>
+                        <th style="width: 30%"><label class="col-lg-2 font-weight-bold">Supplier ID</label></th>
+                        <th>   @Html.DisplayFor(model => model.id)</th>
+                    </tr>
+                    <tr>
+                        <th>   <label class="col-lg-2 font-weight-bold">Supplier Name</label></th>
+                        <th>@Html.DisplayFor(model => model.name)</th>
+                    </tr>
+                    <tr>
+                        <th><label class="col-lg-2 font-weight-bold">Address</label></th>
+                        <th>   @Html.DisplayFor(model => model.address)</th>
+                    </tr>
+                    <tr>
+                        <th>  <label class="col-lg-2 font-weight-bold">Cell No</label></th>
+                        <th>  @Html.DisplayFor(model => model.cellNo)</th>
+                    </tr>
+                    <tr>
+                        <th>  <label class="col-lg-2 font-weight-bold">Opening Balance</label></th>
+                        <th> @Html.DisplayFor(model => model.openingBalance)</th>
+                    </tr>
+                    <tr>
+                        <th><label class="col-lg-2 font-weight-bold">CST No</label></th>
+                        <th>  @Html.DisplayFor(model => model.cstNo)</th>
+                    </tr>
+                </table>
                 @using (Html.BeginForm())
                 {
                     @Html.AntiForgeryToken()
 
-                    <div class="form-actions no-color" style="text-align:center">
-                        <input type="submit" value="Delete" class="btn btn-default" /> |
-                        @Html.ActionLink("Back to List", "Index")
+                    <div class="form-actions no-color" style="text-align:right">
+                        <input type="submit" value="Delete" class="btn btn-default" />
+                        @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-primary" })
                     </div>
                 }
             </div>
+        </div>
     </div>
 </div>
- </div>
