--- a/issBlueMetal/Views/Suppliers/Details.cshtml
+++ b/issBlueMetal/Views/Suppliers/Details.cshtml
@@ -4,6 +4,38 @@
     ViewBag.Title = "Details";
 }
 
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #8e24aa !important;
+    }
+
+    input[type=text]:not(.browser-default) {
+        width: 50%;
+    }
+
+    .card-content {
+        width: 70%;
+    }
+
+    input[type=text]:not(.browser-default):hover {
+        color: none;
+    }
+
+    table {
+        padding: 8px;
+        margin-left: 5px;
+    }
+
+    tr th {
+        margin-left: 10px;
+    }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+</style>
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
@@ -31,7 +63,7 @@
             <div class="card-content">
                 <table>
                     <tr>
-                        <th style="width: 15%"><label class="col-lg-2 font-weight-bold">Supplier Id</label></th>
+                        <th style="width: 30%"><label class="col-lg-2 font-weight-bold">Supplier ID</label></th>
                         <th>   @Html.DisplayFor(model => model.id)</th>
                     </tr>
                     <tr>
@@ -56,7 +88,7 @@
                     </tr>
                 </table>
         </div>
-            <div class="header-elements">
+            <div class="header-elements" style="margin:20px">
                 <div class="list-icons" style="text-align:right">
                     @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-primary" })
                     @Html.ActionLink("Edit", "Edit", new { id = Model.id }, new { @class = "btn btn-success" })
