--- a/issBlueMetal/Views/Suppliers/Index.cshtml
+++ b/issBlueMetal/Views/Suppliers/Index.cshtml
@@ -3,16 +3,39 @@
 @{
     ViewBag.Title = "Index";
 }
-
 <style>
     .dataTables_wrapper {
         position: relative;
         clear: both;
         padding: 2% !important;
     }
+
+    label {
+        font-size: 16px;
+        color: #a53394 !important;
+        font-weight: 400;
+    }
+
+    input[type=search]:not(.browser-default) {
+        height: 17px;
+    }
+
+    h3 {
+        text-align: center;
+        font-size: 16px !important;
+        color: #a53394;
+    }
 </style>
 
-<link href="//cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css" rel="stylesheet" />
+
+<!-- Editor -->
+<link href="https://editor.datatables.net/extensions/Editor/css/editor.dataTables.min.css" rel="stylesheet" type="text/css" />
+<script src="https://editor.datatables.net/extensions/Editor/js/dataTables.editor.min.js"></script>
+<!-- Buttons -->
+<link href="https://nightly.datatables.net/buttons/css/buttons.dataTables.css?_=c6b24f8a56e04fcee6105a02f4027462.css" rel="stylesheet" type="text/css" />
+<script src="https://nightly.datatables.net/buttons/js/dataTables.buttons.js?_=c6b24f8a56e04fcee6105a02f4027462"></script>
+
+
 
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
@@ -26,7 +49,7 @@
 
                     </li>
                     <li class="breadcrumb-item">
-                        <a>Supplier Index</a>
+                        <a> Supplier Index</a>
                     </li>
 
                 </ol>
@@ -43,57 +66,45 @@
                 <div class="card">
 
                     <div class="card-tabs">
-                        <table class="display" id="tblItems">
-                            <thead>
+                        <table class="hover row-border" width="100%" id="tblCustomer">
+                            <thead class="thead-dark">
                                 <tr>
                                     <th>
-                                        <h3 class="card-title">Supplier Id</h3>
+                                        <h3 class="card-title"> Supplier ID</h3>
 
                                     </th>
                                     <th>
-                                        <h3 class="card-title">Name</h3>
+                                        <h3 class="card-title">Supplier Name</h3>
 
                                     </th>
-
                                     <th>
                                         <h3 class="card-title">Address</h3>
 
                                     </th>
-
-                                    <th>
-                                        <h3 class="card-title">Cell No</h3>
-
-                                    </th>
-
+                                   
                                     <th>
                                         <h3 class="card-title">Opening Balance</h3>
 
                                     </th>
-
-                                    <th></th>
+                                    <th><h3 class="card-title">Actions</h3></th>
                                 </tr>
                             </thead>
                             <tbody>
                                 @foreach (var item in Model)
                                 {
                                     <tr>
-                                        <td>
+                                        <td style="text-align:center">
                                             @Html.DisplayFor(modelItem => item.id)
                                         </td>
-                                        <td>
+                                        <td style="text-align:center">
                                             @Html.DisplayFor(modelItem => item.name)
                                         </td>
-                                        <td>
+                                        <td style="text-align:center">
                                             @Html.DisplayFor(modelItem => item.address)
                                         </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.cellNo)
-                                        </td>
-                                        <td>
+                                       
+                                        <td style="text-align:center">
                                             @Html.DisplayFor(modelItem => item.openingBalance)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.cstNo)
                                         </td>
                                         <td>
                                             @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
@@ -103,7 +114,6 @@
                                     </tr>
                                 }
                             </tbody>
-
                         </table>
                     </div>
                 </div>
@@ -113,10 +123,38 @@
     </div>
 </div>
 <script>
-    $(document).ready(function () {
 
-        $("#tblItems").DataTable();
+    $(function () {
+        $('#tblCustomer').DataTable({
 
+            "buttons": [
+                {
+                    extend: 'copy',
+                    className: 'btn btn-dark rounded-0',
+                    text: '<i class="far fa-copy"></i> Copy'
+                },
+                {
+                    extend: 'excel',
+                    className: 'btn btn-dark rounded-0',
+                    text: '<i class="far fa-file-excel"></i> Excel'
+                },
+                {
+                    extend: 'pdf',
+                    className: 'btn btn-dark rounded-0',
+                    text: '<i class="far fa-file-pdf"></i> Pdf'
+                },
+                {
+                    extend: 'csv',
+                    className: 'btn btn-dark rounded-0',
+                    text: '<i class="fas fa-file-csv"></i> CSV'
+                },
+                {
+                    extend: 'print',
+                    className: 'btn btn-dark rounded-0',
+                    text: '<i class="fas fa-print"></i> Print'
+                }
+            ]
+
+        });
     });
-
 </script>
