--- a/issBlueMetal/Views/UnitConvertions/Create.cshtml
+++ b/issBlueMetal/Views/UnitConvertions/Create.cshtml
@@ -5,7 +5,22 @@
     ViewBag.Title = "Create";
 }
 
+<style>
+    label {
+        font-size: 19px;
+        font-weight: bold;
+        color: #a53394!important;
+    }
 
+    input[type=text]:not(.browser-default) {
+        width: 75%;
+    }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+    
+</style>
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
@@ -29,7 +44,7 @@
 <div class="row">
     <div class="col s12">
         <div class="card card-tabs">
-            <div class="card-content">
+            <div class="card-content" style="margin:20px">
                 @using (Html.BeginForm())
                 {
                     @Html.AntiForgeryToken()
@@ -44,8 +59,8 @@
                         <div class="row">
                             <div class="form-group">
 
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Main Unit Name</label>
+                                <div class="input-field col s4">
+                                    <label for="icon_prefix3">Main Unit Name</label><br />
                                     <div class="form-control input-field">
                                         @Html.EditorFor(model => model.mainUnitName, new { htmlAttributes = new { @class = "form-control",  } })
                                         @Html.ValidationMessageFor(model => model.mainUnitName, "", new { @class = "text-danger" })
@@ -56,8 +71,8 @@
 
                             <div class="form-group">
 
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Sub Unit Name</label>
+                                <div class="input-field col s4">
+                                    <label for="icon_prefix3">Sub Unit Name</label><br />
                                     <div class="form-control input-field">
                                         @Html.EditorFor(model => model.subUnitName, new { htmlAttributes = new { @class = "form-control",  } })
                                         @Html.ValidationMessageFor(model => model.subUnitName, "", new { @class = "text-danger" })
@@ -67,8 +82,8 @@
 
                             <div class="form-group">
 
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Factor</label>
+                                <div class="input-field col s4">
+                                    <label for="icon_prefix3">Factor</label><br />
                                     <div class="form-control input-field">
                                         @Html.EditorFor(model => model.factor, new { htmlAttributes = new { @class = "form-control",  } })
                                         @Html.ValidationMessageFor(model => model.factor, "", new { @class = "text-danger" })
@@ -77,7 +92,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-md-offset-2 input-field col s3">
+                            <div class="col-md-offset-2 input-field col s4">
                                 <input type="submit" value="Submit" class="btn btn-default" />
                             </div>
                         </div>
