--- a/issBlueMetal/Views/UnitConvertions/Delete.cshtml
+++ b/issBlueMetal/Views/UnitConvertions/Delete.cshtml
@@ -3,12 +3,34 @@
 @{
     ViewBag.Title = "Delete";
 }
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #8e24aa !important;
+        padding: 5px;
+    }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+
+    h6 {
+        color: #f96a47;
+        font-weight: 600;
+    }
+
+    table {
+        margin-left: 40px;
+        width: 75%;
+    }
+</style>
 
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
             <div class="col s10 m6 l6 breadcrumbs-left">
-                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Unit Convertion Delete</span></h5>
+                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Delete Unit Convertion </span></h5>
 
                 <ol class="breadcrumbs mb-0">
                     <li class="breadcrumb-item">
@@ -27,43 +49,35 @@
 <div class="row">
     <div class="col s12">
         <div class="card card-tabs">
-            <div class="card-content">
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Unit Id</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.Id)
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Main Unit Name</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.mainUnitName)
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Sub Unit Name</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.subUnitName)
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-lg-2 font-weight-bold">Factor</label>:
-                    <div class="col-lg-9">
-                        @Html.DisplayFor(model => model.factor)
-                    </div>
-                </div>
-
+            <div class="card-content" style="margin:20px">
+                <h6>Are you sure you want to delete this?</h6><br />
+                <table>
+                    <tr>
+                        <th style="width: 25%"><label class="col-lg-2 font-weight-bold">Unit Id</label></th>
+                        <th>@Html.DisplayFor(model => model.Id)</th>
+                    </tr>
+                    <tr>
+                        <th>   <label class="col-lg-2 font-weight-bold">Main Unit Name</label></th>
+                        <th>  @Html.DisplayFor(model => model.mainUnitName)</th>
+                    </tr>
+                    <tr>
+                        <th><label class="col-lg-2 font-weight-bold">Sub Unit Name</label></th>
+                        <th>@Html.DisplayFor(model => model.subUnitName)</th>
+                    </tr>
+                    <tr>
+                        <th> <label class="col-lg-2 font-weight-bold">Factor</label></th>
+                        <th> @Html.DisplayFor(model => model.factor)</th>
+                    </tr>
+                </table>
 
                 @using (Html.BeginForm())
                 {
                     @Html.AntiForgeryToken()
 
-                    <div class="form-actions no-color" style="text-align:center">
-                        <input type="submit" value="Delete" class="btn btn-default" /> |
-                        @Html.ActionLink("Back to List", "Index")
-                    </div>
+                <div class="form-actions no-color" style="text-align:right">
+                    <input type="submit" value="Delete" class="btn btn-default" /> 
+                    @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-primary" })
+                </div>
                 }
             </div>
         </div>
