--- a/issBlueMetal/Views/UnitConvertions/Details.cshtml
+++ b/issBlueMetal/Views/UnitConvertions/Details.cshtml
@@ -3,6 +3,40 @@
 @{
     ViewBag.Title = "Details";
 }
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #8e24aa !important;
+    }
+
+    input[type=text]:not(.browser-default) {
+        width: 50%;
+    }
+
+    .card-content {
+        width: 70%;
+    }
+
+    input[type=text]:not(.browser-default):hover {
+        color: none;
+    }
+
+    table {
+        padding: 8px;
+        margin-left: 5px;
+    }
+
+    tr th {
+        margin-left: 20px !important;
+    }
+
+    .btn {
+        background-color: #ff5252 !important;
+        margin-bottom:20px;
+        margin-right:20px;
+    }
+</style>
 
 
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
@@ -29,10 +63,10 @@
 <div class="row">
     <div class="col s12">
         <div class="card card-tabs">
-            <div class="card-content">
+            <div class="card-content" style="margin-top:20px;margin-left:20px">
                 <table>
                     <tr>
-                        <th style="width: 15%"><label class="col-lg-2 font-weight-bold">Unit Id</label></th>
+                        <th style="width: 25%"><label class="col-lg-2 font-weight-bold">Unit Id</label></th>
                         <th>@Html.DisplayFor(model => model.Id)</th>
                     </tr>
                     <tr>
@@ -46,10 +80,10 @@
                     <tr>
                         <th> <label class="col-lg-2 font-weight-bold">Factor</label></th>
                         <th> @Html.DisplayFor(model => model.factor)</th>
-                        </tr>
+                    </tr>
                 </table>
 
-        </div>
+            </div>
             <div class="header-elements">
                 <div class="list-icons" style="text-align:right">
                     @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-primary" })
