--- a/issBlueMetal/Views/UnitConvertions/Edit.cshtml
+++ b/issBlueMetal/Views/UnitConvertions/Edit.cshtml
@@ -4,12 +4,30 @@
     ViewBag.Title = "Edit";
 }
 
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #a53394 !important;
+    }
 
+    input[type=text]:not(.browser-default) {
+        width: 75%;
+    }
+
+        input[type=text]:not(.browser-default):hover {
+            color: none;
+        }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+</style>
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
             <div class="col s10 m6 l6 breadcrumbs-left">
-                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Unit Convertion Edit</span></h5>
+                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Edit Unit Convertion </span></h5>
 
                 <ol class="breadcrumbs mb-0">
                     <li class="breadcrumb-item">
@@ -28,7 +46,7 @@
 <div class="row">
     <div class="col s12">
         <div class="card card-tabs">
-            <div class="card-content">
+            <div class="card-content" style="margin:20px">
                 @using (Html.BeginForm())
                 {
                     @Html.AntiForgeryToken()
@@ -43,10 +61,10 @@
                         <div class="row">
                             <div class="form-group">
 
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Main Unit Name</label>
+                                <div class="input-field col s4">
+                                    <label for="icon_prefix3">Main Unit Name</label><br />
                                     <div class="form-control input-field">
-                                        @Html.EditorFor(model => model.mainUnitName, new { htmlAttributes = new { @class = "form-control",  } })
+                                        @Html.EditorFor(model => model.mainUnitName, new { htmlAttributes = new { @class = "form-control", } })
                                         @Html.ValidationMessageFor(model => model.mainUnitName, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -55,8 +73,8 @@
 
                             <div class="form-group">
 
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Sub Unit Name</label>
+                                <div class="input-field col s4">
+                                    <label for="icon_prefix3">Sub Unit Name</label><br />
                                     <div class="form-control input-field">
                                         @Html.EditorFor(model => model.subUnitName, new { htmlAttributes = new { @class = "form-control", } })
                                         @Html.ValidationMessageFor(model => model.subUnitName, "", new { @class = "text-danger" })
@@ -66,10 +84,10 @@
 
                             <div class="form-group">
 
-                                <div class="input-field col s3">
-                                    <label for="icon_prefix3">Factor</label>
+                                <div class="input-field col s4">
+                                    <label for="icon_prefix3">Factor</label><br />
                                     <div class="form-control input-field">
-                                        @Html.EditorFor(model => model.factor, new { htmlAttributes = new { @class = "form-control",  } })
+                                        @Html.EditorFor(model => model.factor, new { htmlAttributes = new { @class = "form-control", } })
                                         @Html.ValidationMessageFor(model => model.factor, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -77,7 +95,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-md-offset-2 input-field col s3">
-                                <input type="submit" value="SUBMIT" class="btn btn-default" />
+                                <input type="submit" value="Submit" class="btn btn-default" />
                             </div>
                         </div>
 
