--- a/issBlueMetal/Views/UnitConvertions/Index.cshtml
+++ b/issBlueMetal/Views/UnitConvertions/Index.cshtml
@@ -12,6 +12,25 @@
         clear: both;
         padding: 2% !important;
     }
+
+    label {
+        font-size: 16px;
+        color: #a53394 !important;
+        font-weight: 400;
+    }
+
+    input[type=search]:not(.browser-default) {
+        height: 17px;
+    }
+
+    h3 {
+        text-align: center;
+        font-size: 16px !important;
+        color: #a53394;
+    }
+    td {
+        text-align:center!important;
+    }
 </style>
 
 <link href="//cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css" rel="stylesheet" />
@@ -61,7 +80,9 @@
                                         <h3 class="card-title">Factor</h3>
 
                                     </th>
-                                    <th></th>
+                                    <th>
+                                        <h3 class="card-title">Actions</h3>
+                                    </th>
                                 </tr>
                             </thead>
 
