--- a/issBlueMetal/Views/Vehicles/Delete.cshtml
+++ b/issBlueMetal/Views/Vehicles/Delete.cshtml
@@ -3,6 +3,28 @@
 @{
     ViewBag.Title = "Delete";
 }
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #8e24aa !important;
+        padding: 5px;
+    }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+
+    h6 {
+        color: #f96a47;
+        font-weight: 600;
+    }
+
+    table {
+        margin-left: 40px;
+        width: 75%;
+    }
+</style>
 
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
@@ -28,153 +50,83 @@
     <div class="col s12">
         <div class="card card-tabs">
             <div class="card-content">
-                <dl class="dl-horizontal">
-                    <dt>
-                        @Html.DisplayNameFor(model => model.vehicleNo)
-                    </dt>
+                <div class="dl-horizontal">
+                    <h6>Are you sure you want to delete this?</h6>
+                    <br />
+                    <table>
+                        <tr>
+                            <th style="width: 25%"> <label class="col-lg-2 font-weight-bold">Vehicle No</label></th>
+                            <th> @Html.DisplayFor(model => model.vehicleNo)</th>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.vehicleNo)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.shortNo)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.shortNo)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.vehicleName)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.vehicleName)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.registrationAddress)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.registrationAddress)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.mfdYear)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.mfdYear)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.insuranceExDate)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.insuranceExDate)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.taxExDate)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.taxExDate)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.permitExDate)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.permitExDate)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.fcExDate)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.fcExDate)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.oillService)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.oillService)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.greecePacking)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.greecePacking)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.coolentOill)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.coolentOill)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.gearBoxOill)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.gearBoxOill)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.grownOill)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.grownOill)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.salary)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.salary)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.vehicleDetail)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.vehicleDetail)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.noofUnit)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.noofUnit)
-                    </dd>
-
-                </dl>
+                        </tr>
+                        <tr>
+                            <th> <label class="col-lg-2 font-weight-bold">Short No</label></th>
+                            <th> @Html.DisplayFor(model => model.shortNo)</th>
+                        </tr>
+                        <tr>
+                            <th>   <label class="col-lg-2 font-weight-bold">Vehicle Name</label></th>
+                            <th>
+                                @Html.DisplayFor(model => model.vehicleName)
+                            </th>
+                        </tr>
+                        <tr>
+                            <th>   <label class="col-lg-2 font-weight-bold">Registration Address</label></th>
+                            <th> @Html.DisplayFor(model => model.registrationAddress)</th>
+                        </tr>
+                        <tr>
+                            <th>   <label class="col-lg-2 font-weight-bold">MFD Year</label></th>
+                            <th> @Html.DisplayFor(model => model.mfdYear)</th>
+                        </tr>
+                        <tr>
+                            <th>   <label class="col-lg-2 font-weight-bold">Insurance Ex Date</label></th>
+                            <th> @Html.DisplayFor(model => model.insuranceExDate)</th>
+                        </tr>
+                        <tr>
+                            <th>   <label class="col-lg-2 font-weight-bold">Tax Ex Date</label></th>
+                            <th> @Html.DisplayFor(model => model.taxExDate)</th>
+                        </tr>
+                        <tr>
+                            <th> <label class="col-lg-2 font-weight-bold">Permit Ex Date</label></th>
+                            <th> @Html.DisplayFor(model => model.permitExDate)</th>
+                        <tr>
+                            <th> <label class="col-lg-2 font-weight-bold">FC Ex Date</label></th>
+                            <th> @Html.DisplayFor(model => model.fcExDate)</th>
+                        <tr>
+                            <th> <label class="col-lg-2 font-weight-bold">Oil Service</label></th>
+                            <th> @Html.DisplayFor(model => model.oillService)</th>
+                        <tr>
+                            <th> <label class="col-lg-2 font-weight-bold">Greece Packing</label></th>
+                            <th> @Html.DisplayFor(model => model.greecePacking)</th>
+                        <tr>
+                            <th> <label class="col-lg-2 font-weight-bold">Coolent Oil</label></th>
+                            <th> @Html.DisplayFor(model => model.coolentOill)</th>
+                        <tr>
+                            <th> <label class="col-lg-2 font-weight-bold">Gear Box Oil</label></th>
+                            <th> @Html.DisplayFor(model => model.gearBoxOill)</th>
+                        <tr>
+                            <th> <label class="col-lg-2 font-weight-bold">Grown Oil</label></th>
+                            <th> @Html.DisplayFor(model => model.grownOill)</th>
+                        <tr>
+                            <th> <label class="col-lg-2 font-weight-bold">Salary</label></th>
+                            <th> @Html.DisplayFor(model => model.salary)</th>
+                        <tr>
+                            <th> <label class="col-lg-2 font-weight-bold">Vehicle Detail</label></th>
+                            <th> @Html.DisplayFor(model => model.vehicleDetail)</th>
+                        <tr>
+                            <th> <label class="col-lg-2 font-weight-bold">No of Unit</label></th>
+                            <th> @Html.DisplayFor(model => model.noofUnit)</th>
+                        </tr>
+                    </table>
+                </div>
 
                 @using (Html.BeginForm())
                 {
                     @Html.AntiForgeryToken()
 
-                    <div class="form-actions no-color" style="text-align:center">
-                        <input type="submit" value="Delete" class="btn btn-default" /> |
-                        @Html.ActionLink("Back to List", "Index")
-                    </div>
+                <div class="form-actions no-color" style="text-align:right">
+                    <input type="submit" value="Delete" class="btn btn-default" /> 
+                    @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-primary" })
+                </div>
                 }
             </div>
         </div>
