--- a/issBlueMetal/Views/Vehicles/Edit.cshtml
+++ b/issBlueMetal/Views/Vehicles/Edit.cshtml
@@ -4,12 +4,30 @@
     ViewBag.Title = "Edit";
 }
 
+<style>
+    label {
+        font-size: 17px;
+        font-weight: 400;
+        color: #8e24aa !important;
+    }
 
+    input[type=text]:not(.browser-default) {
+        width: 100%;
+    }
+
+        input[type=text]:not(.browser-default):hover {
+            color: none;
+        }
+
+    .btn {
+        background-color: #ff5252 !important;
+    }
+</style>
 <div class="breadcrumbs-inline pt-3 pb-1" id="breadcrumbs-wrapper">
     <div class="container">
         <div class="row">
             <div class="col s10 m6 l6 breadcrumbs-left">
-                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Vehicle Edit</span></h5>
+                <h5 class="breadcrumbs-title mt-0 mb-0 display-inline hide-on-small-and-down"><span>Edit Vehicle </span></h5>
 
                 <ol class="breadcrumbs mb-0">
                     <li class="breadcrumb-item">
@@ -45,7 +63,7 @@
                             <div class="form-group">
 
                                 <div class="input-field col s3">
-                                    <label for="icon_prefix3">Vehicle No</label>
+                                    <label for="icon_prefix3">Vehicle No</label><br />
                                     <div class="form-control input-field">
                                         @Html.EditorFor(model => model.vehicleNo, new { htmlAttributes = new { @class = "form-control", } })
                                         @Html.ValidationMessageFor(model => model.vehicleNo, "", new { @class = "text-danger" })
@@ -55,7 +73,7 @@
                             <div class="form-group">
 
                                 <div class="input-field col s3">
-                                    <label for="icon_prefix3">Short No</label>
+                                    <label for="icon_prefix3">Short No</label><br />
                                     <div class="form-control input-field">
                                         @Html.EditorFor(model => model.shortNo, new { htmlAttributes = new { @class = "form-control", } })
                                         @Html.ValidationMessageFor(model => model.shortNo, "", new { @class = "text-danger" })
@@ -65,7 +83,7 @@
                             <div class="form-group">
 
                                 <div class="input-field col s3">
-                                    <label for="icon_prefix3">Vehicle Name</label>
+                                    <label for="icon_prefix3">Vehicle Name</label><br />
                                     <div class="form-control input-field">
                                         @Html.EditorFor(model => model.vehicleName, new { htmlAttributes = new { @class = "form-control", } })
                                         @Html.ValidationMessageFor(model => model.vehicleName, "", new { @class = "text-danger" })
@@ -75,7 +93,7 @@
                             <div class="form-group">
 
                                 <div class="input-field col s3">
-                                    <label for="icon_prefix3">Registration Address</label>
+                                    <label for="icon_prefix3">Registration Address</label><br />
                                     <div class="form-control input-field">
                                         @Html.EditorFor(model => model.registrationAddress, new { htmlAttributes = new { @class = "form-control", } })
                                         @Html.ValidationMessageFor(model => model.registrationAddress, "", new { @class = "text-danger" })
@@ -86,7 +104,7 @@
                                 <div class="form-group">
 
                                     <div class="input-field col s3">
-                                        <label for="icon_prefix3">MFD Year</label>
+                                        <label for="icon_prefix3">MFD Year</label><br />
                                         <div class="form-control input-field">
 
                                             @Html.TextBoxFor(m => m.mfdYear, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
@@ -97,7 +115,7 @@
                                 <div class="form-group">
 
                                     <div class="input-field col s3">
-                                        <label for="icon_prefix3">Insurance Ex Date</label>
+                                        <label for="icon_prefix3">Insurance Ex Date</label><br />
                                         <div class="form-control input-field">
                                             @Html.TextBoxFor(m => m.insuranceExDate, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
 
@@ -107,7 +125,7 @@
                                 <div class="form-group">
 
                                     <div class="input-field col s3">
-                                        <label for="icon_prefix3">Tax Ex Date</label>
+                                        <label for="icon_prefix3">Tax Ex Date</label><br />
                                         <div class="form-control input-field">
                                             @Html.TextBoxFor(m => m.taxExDate, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
 
@@ -116,7 +134,7 @@
                                     <div class="form-group">
 
                                         <div class="input-field col s3">
-                                            <label for="icon_prefix3">Permit Ex Date</label>
+                                            <label for="icon_prefix3">Permit Ex Date</label><br />
                                             <div class="form-control input-field">
                                                 @Html.TextBoxFor(m => m.permitExDate, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
 
@@ -128,7 +146,7 @@
                                     <div class="form-group">
 
                                         <div class="input-field col s3">
-                                            <label for="icon_prefix3">FC Ex Date</label>
+                                            <label for="icon_prefix3">FC Ex Date</label><br />
                                             <div class="form-control input-field">
                                                 @Html.TextBoxFor(m => m.fcExDate, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
 
@@ -138,7 +156,7 @@
                                     <div class="form-group">
 
                                         <div class="input-field col s3">
-                                            <label for="icon_prefix3">oillService</label>
+                                            <label for="icon_prefix3">oillService</label><br />
                                             <div class="form-control input-field">
                                                 @Html.TextBoxFor(m => m.oillService, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
 
@@ -148,7 +166,7 @@
                                     <div class="form-group">
 
                                         <div class="input-field col s3">
-                                            <label for="icon_prefix3">Greece Packing</label>
+                                            <label for="icon_prefix3">Greece Packing</label><br />
                                             <div class="form-control input-field">
                                                 @Html.TextBoxFor(m => m.greecePacking, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
 
@@ -158,7 +176,7 @@
                                     <div class="form-group">
 
                                         <div class="input-field col s3">
-                                            <label for="icon_prefix3">Coolent Oill</label>
+                                            <label for="icon_prefix3">Coolent Oill</label><br />
                                             <div class="form-control input-field">
                                                 @Html.TextBoxFor(m => m.coolentOill, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
 
@@ -170,7 +188,7 @@
                                     <div class="form-group">
 
                                         <div class="input-field col s3">
-                                            <label for="icon_prefix3">Gear Box Oill</label>
+                                            <label for="icon_prefix3">Gear Box Oill</label><br />
                                             <div class="form-control input-field">
                                                 @Html.TextBoxFor(m => m.gearBoxOill, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
 
@@ -180,7 +198,7 @@
                                     <div class="form-group">
 
                                         <div class="input-field col s3">
-                                            <label for="icon_prefix3">Grown Oill</label>
+                                            <label for="icon_prefix3">Grown Oill</label><br />
                                             <div class="form-control input-field">
                                                 @Html.TextBoxFor(m => m.grownOill, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
 
@@ -190,7 +208,7 @@
                                     <div class="form-group">
 
                                         <div class="input-field col s3">
-                                            <label for="icon_prefix3">Salary</label>
+                                            <label for="icon_prefix3">Salary</label><br />
                                             <div class="form-control input-field">
                                                 @Html.EditorFor(model => model.salary, new { htmlAttributes = new { @class = "form-control", } })
                                                 @Html.ValidationMessageFor(model => model.salary, "", new { @class = "text-danger" })
@@ -201,7 +219,7 @@
 
 
                                         <div class="input-field col s3">
-                                            <label for="icon_prefix3">Vehicle Detail</label>
+                                            <label for="icon_prefix3">Vehicle Detail</label><br />
                                             <div class="form-control input-field">
                                                 @Html.EditorFor(model => model.vehicleDetail, new { htmlAttributes = new { @class = "form-control", } })
                                                 @Html.ValidationMessageFor(model => model.vehicleDetail, "", new { @class = "text-danger" })
@@ -213,7 +231,7 @@
                                     <div class="form-group">
 
                                         <div class="input-field col s3">
-                                            <label for="icon_prefix3">No of Unit</label>
+                                            <label for="icon_prefix3">No of Unit</label><br />
                                             <div class="form-control input-field">
                                                 @Html.EditorFor(model => model.noofUnit, new { htmlAttributes = new { @class = "form-control", } })
                                                 @Html.ValidationMessageFor(model => model.noofUnit, "", new { @class = "text-danger" })
