--- a/issBlueMetal/Views/Vehicles/Index.cshtml
+++ b/issBlueMetal/Views/Vehicles/Index.cshtml
@@ -9,6 +9,23 @@
         clear: both;
         padding: 2% !important;
     }
+
+    label {
+        font-size: 16px;
+        color: #a53394 !important;
+        font-weight: 400;
+    }
+
+    input[type=search]:not(.browser-default) {
+        height: 17px;
+    }
+
+    h3 {
+        text-align: center;
+        font-size: 16px !important;
+        color: #a53394;
+    }
+    
 </style>
 
 <link href="//cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css" rel="stylesheet" />
@@ -45,7 +62,7 @@
                             <thead>
                                 <tr>
                                     <th>
-                                        <h3 class="card-title">Id</h3>
+                                        <h3 class="card-title">ID</h3>
 
                                     </th>
                                     <th>
@@ -69,26 +86,28 @@
 
                                     </th>
                                   
-                                    <th></th>
+                                    <th>
+                                        <h3 class="card-title">Actions</h3>
+                                    </th>
                                 </tr>
                             </thead>
                             <tbody>
                                 @foreach (var item in Model)
                                 {
                                     <tr>
-                                        <td>
+                                        <td style="text-align:center!important">
                                             @Html.DisplayFor(modelItem => item.id)
                                         </td>
-                                        <td>
+                                        <td style="text-align:center">
                                             @Html.DisplayFor(modelItem => item.vehicleNo)
                                         </td>
-                                        <td>
+                                        <td style="text-align:center">
                                             @Html.DisplayFor(modelItem => item.shortNo)
                                         </td>
-                                        <td>
+                                        <td style="text-align:center">
                                             @Html.DisplayFor(modelItem => item.vehicleName)
                                         </td>
-                                        <td>
+                                        <td style="text-align:center">
                                             @Html.DisplayFor(modelItem => item.registrationAddress)
                                         </td>
                                         
@@ -102,7 +121,7 @@
                                     else
                                     {
                                         <td></td>}
-                                        <td>
+                                        <td style="text-align:center">
                                             @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
                                             @Html.ActionLink("Details", "Details", new { id = item.id }) |
                                             @Html.ActionLink("Delete", "Delete", new { id = item.id })
